fix: DOM scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ html, body, #app {
 
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 #app {
